Added textbox to accept coordinates

--- a/views/spotlight.ejs
+++ b/views/spotlight.ejs
@@ -226,7 +226,7 @@
                 geo_json_input = '';
             }
             
-            /* To remove the input from textbox after the button is clicked. */
+            /*To remove the input from textbox after the button is clicked */
             document.getElementById('geo_polygon_string').value = "";
             document.getElementById('geo_polygon_string_coor').value = "";
             
